--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -116,6 +116,7 @@ label.inline {
 
 input[type="text"],
 input[type="email"],
+input[type="password"],
 textarea {
     width: 100%;
     padding: 10px;
@@ -125,8 +126,9 @@ textarea {
     box-sizing: border-box;
 }
 
-input[type="text"]:focus,
-input[type="email"]:focus,
+input[type="text"],
+input[type="email"],
+input[type="password"],
 textarea:focus {
     border-color: #007bff;
     outline: none;
